<resources>
    <string name="app_name">D-Text</string>
    <string name="title_name">D-TEXT</string>
    <string name="title_home">-TEXT</string>
    <string name="tagline">Keeps You Safe</string>
    <string name="welcome_title">Security Guard for Mobile Phone</string>
    <string name="empty">N/A</string>
    <string name="ok">ตกลง</string>
    <string name="cancel">ยกเลิก</string>
    <string name="guest_mode"><u>โหมดผู้มาเยือน</u></string>
    <string name="back">ย้อนกลับ</string>
    <string name="close">ปิด</string>
    <string name="delete_all_dialog_title">ลบประวัติทั้งหมด</string>
    <string name="delete_all_dialog_des">ต้องการลบประวัติทั้งหมดหรือไม่</string>
    <string name="delete_dialog_title">ลบประวัติ</string>
    <string name="delete_dialog_des">ต้องการลบหรือไม่</string>
    <string name="logout_dialog_title">ออกจากระบบ</string>
    <string name="logout_dialog_des">ต้องการออกจากระบบหรือไม่</string>
    <string name="sign_in">เข้าสู่ระบบ</string>
    <string name="sign_up">ลงทะเบียน</string>
    <string name="sing_out">ออกจากระบบ</string>
    <string name="email">อีเมล</string>
    <string name="username">ชื่อผู้ใช้</string>
    <string name="error_username_1">ไม่พบชื่อผู้ใช้</string>
    <string name="error_username_2">ชื่อผู้ใช้นี้ถูกใช้แล้ว</string>
    <string name="password">รหัสผ่าน</string>
    <string name="confirm_password">ยืนยันรหัสผ่าน</string>
    <string name="phone">เบอร์โทร</string>
    <string name="or">หรือ</string>
    <string name="forgot_password"><u>ลืมรหัสผ่าน?</u></string>
    <string name="google">เข้าสู่ระบบด้วย Google</string>
    <string name="no_account">คุณยังไม่มีบัญชี?</string>
    <string name="have_account">คุณมีบัญชีแล้ว?</string>
    <string name="accept_policy">ยอมรับเงื่อนไขทั้งหมด</string>
    <string name="accept_policy_2">ยอมรับ</string>
    <string name="accept_policy_3"><u>นโยบายการคุ้มครองข้อมูลส่วนบุคคล</u></string>
    <string name="continue_title">ดำเนินการต่อ</string>
    <string name="reset_title">รีเซ็ตรหัสผ่าน</string>
    <string name="enter_email">กรอกอีเมลของคุณ</string>
    <string name="enter_otp">กรอกรหัส OTP</string>
    <string name="new_password">กรอกรหัสผ่านใหม่</string>
    <string name="signin_success">เข้าสู่ระบบสำเร็จ</string>
    <string name="signup_success">ลงทะเบียนสำเร็จ</string>
    <string name="error_email_1">อีเมลนี้ถูกใช้แล้ว</string>
    <string name="error_empty_email">กรุณากรอกข้อมูล</string>
    <string name="error_format">รูปแบบอีเมลไม่ถูกต้อง</string>
    <string name="error_empty_password">กรุณากรอกข้อมูล</string>
    <string name="error_incorrect_password">รหัสผ่านไม่ถูกต้อง</string>
    <string name="error_notmatch_password">รหัสผ่านไม่ตรงกัน</string>
    <string name="error_confirm_password">กรุณากรอกข้อมูล</string>
    <string name="error_empty_phone">กรุณากรอกข้อมูล</string>
    <string name="error_format_phone">รูปแบบเบอร์โทรศัพท์ไม่ถูกต้อง</string>
    <string name="error_password_uppercase">ต้องมีอักษรตัวพิมพ์ใหญ่อย่างน้อยหนึ่งตัว</string>
    <string name="error_password_lowercase">ต้องมีอักษรตัวพิมพ์เล็กอย่างน้อยหนึ่งตัว</string>
    <string name="error_password_digit">ต้องมีอักษรตัวเลขอย่างน้อยหนึ่งตัว</string>
    <string name="error_password_special_character">ต้องมี @#$%^&amp;_+=! อย่างน้อยหนึ่งตัว</string>
    <string name="error_password_whitespace">ไม่อนุญาตให้มีช่องว่าง</string>
    <string name="error_password_min">ต้องมีความยาวขั้นต่ำ 8 ตัวอักษร</string>
    <string name="onboard_title_1">การแจ้งเตือน</string>
    <string name="onboard_subtitle_1">แจ้งเตือนทันทีเมื่อพบ URL ที่เป็นอันตราย</string>
    <string name="onboard_title_2">การตรวจจับอัตโนมัติ</string>
    <string name="onboard_subtitle_2">ตรวจจับ URL ที่เป็นอันตรายตลอด 24 ชั่วโมง</string>
    <string name="onboard_title_3">การสแกนด้วยตนเอง</string>
    <string name="onboard_subtitle_3">สามารถสแกนลิงค์ด้วยตนเองเมื่อมีข้อสงสัย</string>
    <string name="start_now">เริ่มเลย</string>
    <string name="warning_SDK_34_1">แจ้งเตือนสำหรับ Android 14</string>
    <string name="warning_SDK_34_2">การทำงานบางอย่างของแอปพลิเคชันอาจไม่รองบน Android 14 (SDK Version  34)</string>
    <string name="warning_dialog_1">ขออภัยในความไม่สะดวก</string>
    <string name="warning_dialog_2">การรีเซ็ตรหัสผ่านไม่มาสามารถใช้งานได้ในขณะนี้</string>
    <string name="warning_dialog_3">ไม่รองรับการทำงานในอุปกรณ์นี้</string>
    <string name="search">พิมพ์หรือวาง URL</string>
    <string name="scan">แสกนลิงก์</string>
    <string name="history">ประวัติ</string>
    <string name="detect_history">ประวัติการตรวจจับอัตโนมัติ</string>
    <string name="auto_scan">การตรวจจับอัตโนมัติ</string>
    <string name="clear_all"><u>ลบทั้งหมด</u></string>
    <string name="delete_success">ลบสำเร็จ</string>
    <string name="risk_level">ระดับภัยคุกคาม</string>
    <string name="unsafe">ลิงค์ไม่ปลอดภัย</string>
    <string name="suspicious">ลิงค์ที่น่าสงสัย</string>
    <string name="safe">ลิงค์ปลอดภัย</string>
    <string name="no_information">ไม่มีข้อมูล</string>
    <string name="warning_1">*กรุณาอย่าคลิกลิงค์นี้</string>
    <string name="warning_2">*ลบข้อความถ้าเป็นไปได้</string>
    <string name="threat_type">ประเภทภัยคุกคาม</string>
    <string name="overview">ภาพรวมรายงาน</string>
    <string name="organization">องค์กร</string>
    <string name="safe_link">ลิงค์นี้ปลอดภัย</string>
    <string name="browser">ไปยังบราวเซอร์</string>
    <string name="checklist_1">Shorted URL</string>
    <string name="checklist_1.5">Redirect URL</string>
    <string name="checklist_2">SSL Certificate</string>
    <string name="checklist_3">IFRAME</string>
    <string name="checklist_4">FORM</string>
    <string name="checklist_5">Domain Age Day</string>
    <string name="result_1">Checklist</string>
    <string name="result_2">Google Web Risk</string>
    <string name="result_3">Phishtank</string>
    <string name="result_4">ในฐานข้อมูล</string>
    <string name="result_safe">ปลอดภัย</string>
    <string name="result_suspicious">น่าสงสัย</string>
    <string name="result_unsafe">ไม่ปลอดภัย</string>
    <string name="low">ต่ำ</string>
    <string name="medium">ปานกลาง</string>
    <string name="high">สูง</string>
    <string name="found">พบ</string>
    <string name="not_found">ไม่พบ</string>
    <string name="source">พบใน</string>
    <string name="malware">มัลแวร์</string>
    <string name="phishing">ฟิชชิง</string>
    <string name="spam">สแปม</string>
    <string name="notification_title">แจ้งเตือนลิงค์ที่เป็นอันตราย</string>
    <string name="message_auto_scan_title">การตรวจสอบข้อความ</string>
    <string name="message_auto_scan_des">ระบบตรวจจับข้อความอัตโนมัติ</string>
    <string name="notification_auto_scan_title">การตรวจสอบการแจ้งเตือน</string>
    <string name="notification_auto_scan_des">ระบบตรวจจับการแจ้งเตือนอัตโนมัติ</string>
    <string name="notification_safe_title">ตรวจพบลิงก์ที่ปลอดภัย</string>
    <string name="notification_suspicious_title">ตรวจพบลิงก์ที่น่าสงสัย</string>
    <string name="notification_unsafe_title">ตรวจพบลิงก์ที่ไม่ปลอดภัย</string>
    <string name="notification_no_info_title">ตรวจพบลิงก์ที่ไม่มีข้อมูล</string>
    <string name="source_message">ข้อความ</string>
    <string name="source_notification">การแจ้งเตือน</string>
    <string name="title_settings">การตั้งค่า</string>
    <string name="title_privacy_policy">นโยบายความเป็นส่วนตัว</string>
    <string name="policy_1">นโยบายการคุ้มครองข้อมูลส่วนบุคคล</string>
    <string name="policy_2">โปรดอ่านและทำความเข้าใจนโยบายการคุ้มครองข้อมูลส่วนบุคคลนี้อย่างละเอียด เพื่อให้รับทราบถึงนโยบายการคุ้มครอง ข้อมูลส่วนบุคคลของแอปพลิเคชันของเรา โดยมีรายละเอียดดังนี้</string>
    <string name="policy_3">การเคารพสิทธิในความเป็นส่วนบุคคลของผู้ใช้บริการ</string>
    <string name="policy_4">1. โครงการนี้เคารพและให้ความสำคัญถึงสิทธิ ข้อมูลส่วนบุคคล และการคุ้มครองข้อมูลส่วนบุคคลของท่านและท่านย่อมมีความประสงค์ที่จะได้รับความมั่นคงปลอดภัยในการใช้บริการผ่านแอปพลิเคชันของเรา</string>
    <string name="policy_5">2. ข้อมูลส่วนบุคคลของท่านที่โครงการได้รับมา เช่น ชื่อ หมายเลขโทรศัพท์ เป็นต้น ซึ่งสามารถบ่งบอกตัวบุคคลของท่านได้ และเป็นข้อมูลส่วนบุคคลที่มีความสมบูรณ์ถูกต้องเป็นปัจจุบัน และมีคุณภาพจะถูกนำไปใช้ให้เป็นไปตามวัตถุประสงค์การดำเนินงานของโครงการเท่านั้น และโครงการจะดำเนินมาตรการที่เข้มงวดในการรักษาความมั่นคงปลอดภัยตลอดจนการป้องกันมิให้มีการนำข้อมูลส่วนบุคคลไปใช้โดยมิได้รับอนุญาตจากท่าน</string>
    <string name="policy_6">วัตถุประสงค์ในการเข้าถึงข้อมูลส่วนบุคคล</string>
    <string name="policy_7">1. โครงการเข้าถึงข้อมูลส่วนบุคคลของท่าน เพื่อการดำเนินงานของโครงการ การศึกษา วิจัย หรือการจัดทำสถิติ ซึ่งเป็นไปตามวัตถุประสงค์ของการดำเนินงานของโครงการ</string>
    <string name="policy_8">2. โครงการเข้าถึงข้อมูลส่วนบุคคลของท่าน โดยนำมาวิเคราห์ เพื่อให้ทราบถึงความปลอดภัยในการคลิกลิงค์ที่ได้ท่านรับ และไม่ตกเป็นเหยื่อของกลุ่มมิจฉาชีพ</string>
    <string name="policy_9">3. โครงการเข้าถึงข้อมูลส่วนบุคคลของท่าน โดยนำข้อมูลของท่านมาวิเคราห์ และมีการใช้บริการของหน่วยงานภายนอกที่มีการเข้าถึงข้อมูลของท่าน เพื่อทราบถึงความปลอดภัยของลิงค์ที่ท่านได้รับ และไม่ตกเป็นเหยื่อของกลุ่มมิจฉาชีพ</string>
    <string name="policy_10">วัตถุประสงค์ในการเก็บรวบรวมข้อมูลส่วนบุคคล</string>
    <string name="policy_11">1. โครงการเก็บรวบรวมข้อมูลส่วนบุคคลของท่าน เพื่อการดำเนินงานของโครงการ การศึกษา วิจัยหรือการจัดทำสถิติ ซึ่งเป็นไปตามวัตถุประสงค์ของการดำเนินงานของโครงการ</string>
    <string name="policy_12">2. หากภายหลังมีการเปลี่ยนแปลงวัตถุประสงค์ในการเก็บรวบรวม ข้อมูลส่วนบุคคลโครงการจะแจ้งให้ท่านทราบ และขอความยินยอมและจัดให้มีบันทึกการแก้ไขเพิ่มเติมไว้เป็นหลักฐาน</string>
    <string name="policy_13">3. โครงการจะไม่กระทำการใดๆ แตกต่างจากที่ระบุในวัตถุประสงค์ของการเก็บรวบรวมข้อมูล เว้นแต่</string>
    <string name="policy_14">- ได้แจ้งวัตถุประสงค์ใหม่ให้ผู้ใช้บริการทราบ และได้รับความยินยอมจากผู้ใช้บริการ</string>
    <string name="policy_15">- เป็นกรณีที่กฎหมายกำหนด</string>
    <string name="policy_16">การนำข้อมูลส่วนบุคคลไปใช้อย่างจำกัด</string>
    <string name="policy_17">1. โครงการจะใช้ เปิดเผยข้อมูลส่วนบุคคลของท่านได้ ต่อเมื่อได้รับความยินยอมจากท่านและจะต้องเป็นการใช้ตามวัตถุประสงค์ของโครงการเท่านั้น</string>
    <string name="policy_18">2. โครงการจะดูแลให้ผู้ปฏิบัติงานของโครงการมิให้เปิดเผย แสดง หรือทำให้ปรากฏในลักษณะอื่นใดซึ่งข้อมูลส่วนบุคคล ของท่านนอกเหนือไปจากวัตถุประสงค์หรือต่อบุคคลภายนอก เว้นแต่</string>
    <string name="policy_19">- ได้รับความยินยอมเป็นหนังสือจากท่าน</string>
    <string name="policy_20">- เป็นกรณีที่กฎหมายกำหนด</string>
    <string name="policy_21">- เป็นไปเพื่อประโยชน์ของท่าน และการขอความยินยอมไม่อาจกระทำได้ในเวลานั้น</string>
    <string name="policy_22">- เป็นไปเพื่อประโยชน์เกี่ยวกับชีวิต สุขภาพ หรือความปลอดภัยของท่านและผู้ใช้บริการท่านอื่น</string>
    <string name="policy_23">- เพื่อประโยชน์แก่การสอบสวนของพนักงานสอบสวน หรือการพิจารณาพิพากษาคดีของศาล</string>
    <string name="policy_24">- เพื่อประโยชน์ในการศึกษา วิจัย หรือการจัดทำสถิติ</string>
    <string name="policy_25">4. ในบางกรณีโครงการอาจให้บุคคลหรือหน่วยงานอื่นเข้าถึงหรือใช้ข้อมูลส่วนบุคคลของท่านเท่าที่จำเป็น และเพื่อให้เป็นไปตามวัตถุประสงค์และอำนาจหน้าที่ของโครงการ ทั้งนี้โครงการจะต้องได้รับความยินยอมจากท่านก่อน</string>
    <string name="policy_26">การรักษาความมั่นคงปลอดภัย</string>
    <string name="policy_27">โครงการตระหนักถึงความสำคัญของการรักษาความมั่นคงปลอดภัยของข้อมูลส่วนบุคคลของท่าน โครงการจึงกำหนดให้มีมาตรการในการรักษาความมั่นคงปลอดภัยของข้อมูลส่วนบุคคล อย่างเหมาะสมและสอดคล้องกับการรักษาความลับของข้อมูลส่วนบุคคลเพื่อป้องกันการสูญหาย การเข้าถึง ทำลาย ใช้ แปลง แก้ไข หรือเปิดเผยข้อมูลส่วนบุคคลโดยไม่มีสิทธิหรือโดยไม่ชอบด้วย กฎหมาย โดยให้เป็นไปตามที่กำหนดในนโยบายและแนวปฏิบัติ ในการรักษาความมั่นคงปลอดภัยด้านเทคโนโลยีสารสนเทศของโครงการ</string>
    <string name="policy_28">การเปลี่ยนแปลงนโยบายการคุ้มครองข้อมูลส่วนบุคคล</string>
    <string name="policy_29">โครงการอาจปรับปรุงนโยบายส่วนบุคคลนี้ เพื่อให้สอดคล้องกับ การดำเนินงานของโครงการ และข้อเสนอแนะ ความคิดเห็น จากท่าน โครงการจะประกาศแจ้งการเปลี่ยนแปลงให้ทราบอย่าง ชัดเจนก่อนจะเริ่มดำเนินการเปลี่ยนแปลง หรืออาจส่งประกาศ แจ้งเตือนให้ท่านทราบโดยตรง</string>
</resources>