<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_primary">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="32dp"
        android:layout_marginBottom="-32dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="60dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_privacy_policy"
                android:fontFamily="@font/kanit_medium"
                android:textSize="20sp"
                android:textColor="@color/text_primary"
                android:textAlignment="center"
                android:layout_marginTop="16dp"/>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/policy_1"
                        android:fontFamily="@font/kanit_medium"
                        android:textSize="16sp"
                        android:textColor="@color/text_primary"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/policy_2"
                        android:fontFamily="@font/kanit"
                        android:textSize="12sp"
                        android:textColor="@color/text_primary"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/policy_3"
                        android:fontFamily="@font/kanit_medium"
                        android:textSize="12sp"
                        android:textColor="@color/text_primary"
                        android:layout_marginTop="8dp"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/policy_4"
                        android:fontFamily="@font/kanit"
                        android:textSize="12sp"
                        android:textColor="@color/text_primary"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/policy_5"
                        android:fontFamily="@font/kanit"
                        android:textSize="12sp"
                        android:textColor="@color/text_primary"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/policy_3"
                        android:fontFamily="@font/kanit_medium"
                        android:textSize="12sp"
                        android:textColor="@color/text_primary"
                        android:layout_marginTop="8dp"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/policy_4"
                        android:fontFamily="@font/kanit"
                        android:textSize="12sp"
                        android:textColor="@color/text_primary"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/policy_5"
                        android:fontFamily="@font/kanit"
                        android:textSize="12sp"
                        android:textColor="@color/text_primary"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.core.widget.NestedScrollView>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>