<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/box_rounded"
    android:layout_marginHorizontal="30dp">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintTop_toTopOf="@id/title"
        app:layout_constraintBottom_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:background="@color/blank"
        android:src="@drawable/round_logout_24"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/icon"
        android:layout_marginTop="10dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="10dp"
        android:text="@string/logout_dialog_title"
        android:fontFamily="@font/kanit_medium"
        android:textColor="@color/text_primary"
        android:textSize="16sp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_container"
        android:layout_marginHorizontal="14dp"
        android:layout_marginVertical="8dp"
        android:text="@string/logout_dialog_des"
        android:fontFamily="@font/kanit"
        android:textColor="@color/text_primary"
        android:textSize="14sp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/button_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_button"
            android:contentDescription="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/disable_button"
            android:text="@string/cancel"
            android:fontFamily="@font/kanit"
            android:textColor="@color/text_primary"
            android:textSize="12sp"
            android:layout_marginEnd="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirm_button"
            android:contentDescription="@string/ok"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/logout_button"
            android:text="@string/logout_dialog_title"
            android:fontFamily="@font/kanit"
            android:textColor="@color/white"
            android:textSize="12sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>